tests/script_errors/bin_invalid_bits/error.txt
Error: 
    1 | <<event:100>>
      |   ^^^^^^^^^ negative bits or bits > 64 are are not allowed: 100